# Hyprland-Dotfiles

./: .aich.md  .gitignore  README.md  bootstrap.sh
docs/: REQUIREMENTS.md
home/: .bash_profile  .bashrc  .env.example  .gitconfig  .gtkrc-2.0  .p10k.zsh  .tmux.conf  .zshenv  .zshrc  launch_monitors.sh
home/.config/btop/: btop.conf
home/.config/cava/: config
home/.config/dotfiles/: healthcheck.sh  session_tools.sh
home/.config/foot/: foot.ini
home/.config/ghostty/: .config.kate-swp  wallust.conf
home/.config/gtk-3.0/: settings.ini
home/.config/gtk-4.0/: settings.ini
home/.config/hypr/: hyprland.conf  monitors.conf
home/.config/hypr/UserConfigs/: ENVariables.conf  Startup_Apps.conf
home/.config/hypr/configs/: Keybinds.conf  (+2 more)
home/.config/qt5ct/: qt5ct.conf
home/.config/qt6ct/: qt6ct.conf
home/.config/rofi/: .current_wallpaper  config.rasi
home/.config/waybar/: ModulesVertical  UserModules  config  style.css
home/.config/xsettingsd/: xsettingsd.conf
home/waybar-scripts/: README.md  test_modules.py  traffic_rs_bin  waybar-audio-menu.sh  waybar-audio.py  waybar-network.py  waybar-news-ribbon.py  waybar-traffic.py  waybar_utils.py
home/waybar-scripts/traffic_rs/: Cargo.toml  out.txt
home/waybar-scripts/traffic_rs/scripts/: setcap_traffic.sh
home/waybar-scripts/traffic_rs/src/: main.rs  traffic_gui.rs  traffic_shader.wgsl
manifests/: aur-explicit.txt  npm-global-packages.txt  npm-global.txt  pacman-explicit.txt  pipx.txt  voice-venv-requirements.txt
scripts/: apply_dotfiles.sh  install_dependencies.sh  post_install_autodetect.sh
(+48 files in other folders)
