[package]
name = "traffic_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "traffic_rs"
path = "src/main.rs"

[[bin]]
name = "traffic_gui"
path = "src/traffic_gui.rs"

[dependencies]
pnet = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"
crossbeam-channel = "0.5"
wgpu = { version = "28.0.0", features = ["wgsl"] }
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
